fixed the header and white space

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -36,7 +36,6 @@ li /* for recipe here*/{
   padding: 0px 15px 0px 15px;
   font-weight: bold;
   font-size: 20px;
-  color: white;
   font-family: 'Lato', sans-serif;
 }
 
@@ -66,6 +65,7 @@ h3 {
 h4 {
   font-family: 'Libre Baskerville', serif;
 }
+
 a:link {
     text-decoration: none;
     color: black;
@@ -81,9 +81,7 @@ a:hover {
     color: black;
 }
 
-a:active {
-    text-decoration: underline;
-    color: black;
+
 }
 
 .recipes {
